# fastAPI-event-driven

./: docker-compose.yml
auth_service/: .dockerignore  .env.dev.local  .env.example  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
auth_service/alembic/: env.py
auth_service/alembic/versions/: f400852b745c_create_users_table.py
auth_service/app/: config.py  main.py
auth_service/app/api/: auth.py
auth_service/app/core/: security.py
auth_service/app/db/: __init__.py  database.py  models.py
auth_service/app/schemas/: __init__.py  user.py
